Adjust in event edit form

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -15,36 +15,36 @@
 
 $mdc-typography-font-family: "Cabin";
 
-$mdc-typography-styles-headline1: (
-font-size: 1.8rem,
-line-height: 1.1rem,
-font-weight: 500
-);
+// $mdc-typography-styles-headline1: (
+// font-size: 1.8rem,
+// line-height: 1.1rem,
+// font-weight: 500
+// );
 
-$mdc-typography-styles-headline2: (
-font-size: 1rem,
-line-height: 1.1rem,
-font-weight: 500
-);
+// $mdc-typography-styles-headline2: (
+// font-size: 1rem,
+// line-height: 1.1rem,
+// font-weight: 500
+// );
 
-$mdc-typography-styles-subtitle1: (
-font-size: 0.9rem,
-line-height: 1.1rem,
-font-weight: 400
-);
+// $mdc-typography-styles-subtitle1: (
+// font-size: 0.9rem,
+// line-height: 1.1rem,
+// font-weight: 400
+// );
 
-$mdc-typography-styles-subtitle2: (
-font-size: 0.8rem,
-line-height: 1.1rem,
-font-weight: 300
-);
+// $mdc-typography-styles-subtitle2: (
+// font-size: 0.8rem,
+// line-height: 1.1rem,
+// font-weight: 300
+// );
 
-$mdc-typography-styles-body2: (
-font-family: Roboto,
-font-size: 0.775rem,
-line-height: 1.25rem,
-font-weight: 100
-);
+// $mdc-typography-styles-body2: (
+// font-family: Roboto,
+// font-size: 0.775rem,
+// line-height: 1.25rem,
+// font-weight: 100
+// );
 
 @import "bot/embed";
 @import "bot/styles";
