--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -16,7 +16,7 @@
         <i class="material-icons-outlined">star_border</i>
       </div>
       <div class="me-floa-menu__label">
-        Para você
+        Para voc?
       </div>
     </div>
     <% end %>
