Add kinds to classifier

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -67,6 +67,7 @@ $mdc-typography-font-family: "Cabin";
 @import "@material/fab/mdc-fab";
 @import "@material/elevation/mdc-elevation";
 @import "@material/snackbar/mdc-snackbar";
+@import "@material/dialog/mdc-dialog";
 @import "components/me-components";
 
 
