--- a/web/app/views/layouts/classifier/_chips.html.erb
+++ b/web/app/views/layouts/classifier/_chips.html.erb
@@ -13,9 +13,9 @@
 	
 	
 	%>
-<div data-controller="classifier-select" class="mdc-menu-surface--anchor">
+<div class="mdc-menu-surface--anchor">
 	<div class="mdc-chip" tabindex="0" style="background-color: <%= get_score_scale_color(event.public_send(feature_score)) %>">
-		<div data-target="classifier-select.moreButton" data-action="click->classifier-select#openMenu" class="mdc-chip__text">
+		<div data-target="classifier.menuButton" data-action="click->classifier#openMenu" class="mdc-chip__text">
 			<%= "#{event.public_send(feature_name)} (#{round_score event.public_send(feature_score), 2})" %>
 		</div>
 	</div>
